--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,24 @@
+# Dependencies
 /node_modules
+
+# Build output
 /dist
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Testing
 /coverage
+
+# Docker
+.dockerignore
+
+# IDE
+.vscode/
