--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "dev": "ts-node src/app.ts",
-    "test": "ts-node src/test-client.ts"
+    "test": "ts-node src/test-client.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm migration:generate -- -d src/config/data-source.ts",
+    "migration:run": "npm run typeorm migration:run -- -d src/config/data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +20,11 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "pg": "^8.16.0",
+    "reflect-metadata": "^0.1.14",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
+    "typeorm": "^0.3.24",
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
@@ -26,6 +32,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^24.0.0",
+    "@types/pg": "^8.10.9",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
