update tests and add checks

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,47 @@
-FROM node:18-alpine
+# Build stage
+FROM node:22-alpine AS builder
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install all dependencies (including devDependencies for build)
+RUN npm ci && npm cache clean --force
 
 # Copy source code
 COPY . .
 
-# Build TypeScript code
-RUN npm run build
+# Build and test the application (excluding e2e tests)
+RUN npm run build && npm run test:unit
 
-# Expose port
-EXPOSE 8088
+# Production stage
+FROM node:22-alpine AS production
 
-# Start the application
-CMD ["npm", "start"]
+# Install curl for healthcheck and create user in single layer
+RUN apk --no-cache add curl && \
+    addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001 -G nodejs
+
+WORKDIR /app
+
+# Copy package.json, built app, and production node_modules in single operation
+COPY --from=builder --chown=nodejs:nodejs /app/package*.json ./
+COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
+COPY --from=builder --chown=nodejs:nodejs /app/node_modules ./node_modules
+
+# Create logs directory
+RUN mkdir -p logs && chown -R nodejs:nodejs /app
+
+# Switch to non-root user
+USER nodejs
+
+# Health check with optimized settings
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+  CMD curl -f http://localhost:8085/health || exit 1
+
+# production port
+EXPOSE 8085
+
+# Use node directly with correct entry point
+CMD ["node", "dist/app.js"]
