--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,30 @@
   "name": "appointment-backend",
   "version": "1.0.0",
   "main": "dist/app.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "npx tsc && npx tsc-alias",
     "start": "node dist/app.js",
+    "start:dev": "npx tsc && npx tsc-alias && node dist/app.js",
     "dev": "ts-node src/app.ts",
-    "test": "ts-node src/test-client.ts",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "migration:generate": "npm run typeorm migration:generate -- -d src/config/data-source.ts",
-    "migration:run": "npm run typeorm migration:run -- -d src/config/data-source.ts"
+    "dev:watch": "nodemon --exec ts-node src/app.ts",
+    "clean": "rimraf dist",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:unit": "cross-env NODE_ENV=test jest --testPathIgnorePatterns='tests/e2e'",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+
+    "migration:generate": "npx typeorm migration:generate src/migrations/AutoMigration -d src/data-source.ts",
+    "migration:create": "npx typeorm migration:create src/migrations/NewMigration",
+    "migration:run": "npx typeorm migration:run -d src/data-source.ts",
+    "migration:revert": "npx typeorm migration:revert -d src/data-source.ts",
+    
+    "db:drop": "npx typeorm schema:drop -d src/data-source.ts",
+    "db:sync": "npx typeorm schema:sync -d src/data-source.ts",
+
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -31,12 +47,27 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.0.0",
     "@types/pg": "^8.10.9",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.46.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^16.0.0",
+    "prettier": "^3.5.3",
+    "jest": "^29.7.0",
+    "rimraf": "^5.0.10",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
+  },
+  "lint-staged": {
+    "*.{ts,js}": "eslint --fix",
+    "*.{ts,js,json,md}": "prettier --write"
   }
 }
