--- a/backend/docker-compose.local.yml
+++ b/backend/docker-compose.local.yml
@@ -1,38 +1,41 @@
 services:
-  app:
-    build: .
-    ports:
-      - "8088:8088"
-    depends_on:
-      - postgres
-    environment:
-      - NODE_ENV=development
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=postgres
-      - DB_NAME=appointment_db
-    volumes:
-      - ./src:/app/src
-    networks:
-      - appointment-network
-
   postgres:
     image: postgres:14-alpine
-    ports:
-      - "5432:5432"
+    env_file: ./.env
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=appointment_db
+      - POSTGRES_USER=$POSTGRESQLDB_USER
+      - POSTGRES_PASSWORD=$POSTGRESQLDB_PASSWORD
+      - POSTGRES_DB=$POSTGRESQLDB_DATABASE
+    ports:
+      - $POSTGRESQLDB_LOCAL_PORT:$POSTGRESQLDB_DOCKER_PORT
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    networks:
-      - appointment-network
-
-networks:
-  appointment-network:
-    driver: bridge
+    healthcheck:
+      test: ["CMD", "pg_isready", "-h", "localhost", "-p", "$POSTGRESQLDB_DOCKER_PORT", "-U", "$POSTGRESQLDB_USER"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+  app:
+    depends_on:
+      postgres:
+        condition: service_healthy
+    build:
+      context: .
+      dockerfile: Dockerfile.local
+    env_file: ./.env
+    ports:
+      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
+    environment:
+      - PORT=$NODE_LOCAL_PORT
+      - NODE_ENV=$NODE_ENV
+      - DB_HOST=postgres
+      - DB_PORT=$POSTGRESQLDB_DOCKER_PORT
+      - DB_USERNAME=$POSTGRESQLDB_USER
+      - DB_PASSWORD=$POSTGRESQLDB_PASSWORD
+      - DB_NAME=$POSTGRESQLDB_DATABASE
+    volumes:
+      - ./:/app
+      - /app/node_modules
 
 volumes:
   postgres-data:
