--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.515.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
@@ -33,6 +34,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "simplex-noise": "^4.0.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
