--- a/backend/package.json
+++ b/backend/package.json
@@ -29,10 +29,15 @@
   "license": "ISC",
   "description": "Backend for appointment locking mechanism",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.6.7",
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.1.14",
     "socket.io": "^4.7.4",
