--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,9 @@
     "dev": "ts-node src/app.ts",
     "dev:watch": "nodemon --exec ts-node src/app.ts",
     "clean": "rimraf dist",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "test:unit": "cross-env NODE_ENV=test jest --testPathIgnorePatterns='tests/e2e'",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "migration:run": "npx typeorm migration:run -d dist/config/data-source.js",
@@ -63,6 +62,7 @@
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
     "rimraf": "^5.0.10",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
